--- a/package.xml
+++ b/package.xml
@@ -3,26 +3,21 @@
 <package format="3">
   <name>object_detector_tensorflow</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="moritz.weisenboehler@hs-karlsruhe.de">Moritz Weisenböhler</maintainer>
+  <description>Python based ROS Nodes for TensorFlow Object Detection Inference</description>
+  <maintainer email="andreas.zachariae@hs-karlsruhe.de">Andreas Zachariae</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>ament_cmake_python</buildtool_depend>
+  <buildtool_depend>ament_python</buildtool_depend>
 
   <depend>rclpy</depend>
-  <depend>sensor_msgs</depend>
+  <depend>iris_ros_core</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
-  <build_depend>rosidl_default_generators</build_depend>
-  <exec_depend>rosidl_default_runtime</exec_depend>
-  <member_of_group>rosidl_interface_packages</member_of_group>
-
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
