--- a/ros/package.xml
+++ b/ros/package.xml
@@ -14,6 +14,7 @@
   <depend>rclpy</depend>
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>diagnostic_updater</depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
 
