Fixed for ROS2 Foxy and minor improvements

--- a/.gitignore
+++ b/.gitignore
@@ -141,7 +141,8 @@ cython_debug/
 # VSCode
 .vscode/
 
-# 
+# Custom
 ros/data/saved_model
 ros/data/label_map.txt
 ros/config/params.yaml
+start_docker.sh
