--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 # Custom
 ros/data/saved_model
-# ros/data/label_map.txt
+ros/data/label_map.txt
 ros/config/params.yaml
 start_docker.sh
 ros/data/*.png
