--- a/ros/object_detector_tensorflow_interfaces/CMakeLists.txt
+++ b/ros/object_detector_tensorflow_interfaces/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(object_detector_tensorflow)
+project(object_detector_tensorflow_interfaces)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -19,7 +19,6 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(rclpy REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(diagnostic_updater REQUIRED)
@@ -36,32 +35,10 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   DEPENDENCIES sensor_msgs
 )
 
-# Install launch and config files
-install(DIRECTORY
-   launch
-   config
-   DESTINATION share/${PROJECT_NAME}/
-)
-
-# Install python library
-install(DIRECTORY
-   ../odtf
-   DESTINATION lib/python3.8/site-packages/
-)
-
-# Install python nodes
-ament_python_install_package(${PROJECT_NAME})
-
-install(PROGRAMS
-    ${PROJECT_NAME}/client.py
-    ${PROJECT_NAME}/continuous_detection_node.py
-    ${PROJECT_NAME}/detection_node.py
-    DESTINATION lib/${PROJECT_NAME}
-)
-
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+ament_export_dependencies(rosidl_default_runtime sensor_msgs)
 ament_package()
