Ignore future config changes

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 .vscode/
 
 # Custom
-ros/data/saved_model
-ros/data/label_map.txt
+ros/object_detector_tensorflow/data/saved_model
+ros/object_detector_tensorflow/data/label_map.txt
 ros/config/params.yaml
 start_docker.sh
 ros/data/*.png
