Add new service

--- a/ros/object_detector_tensorflow_interfaces/CMakeLists.txt
+++ b/ros/object_detector_tensorflow_interfaces/CMakeLists.txt
@@ -33,6 +33,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Detection.msg"
   "msg/Detections.msg"
   "srv/DetectObjects.srv"
+  "srv/DetectObjectPosition.srv"
   DEPENDENCIES ${DEPENDENCIES}
 )
 
