--- a/ros/object_detector_tensorflow/package.xml
+++ b/ros/object_detector_tensorflow/package.xml
@@ -10,6 +10,8 @@
   <depend>rclpy</depend>
   <depend>sensor_msgs</depend>
   <depend>diagnostic_updater</depend>
+  <depend>cv_bridge</depend>
+  <depend>point_transformation_interfaces</depend>
 
   <test_depend>python3-pytest</test_depend>
 
