--- a/ros/object_detector_tensorflow/config/params.yaml
+++ b/ros/object_detector_tensorflow/config/params.yaml
@@ -1,15 +1,15 @@
 detection_node:
   ros__parameters:
-    saved_model_path: "src/object_detector_tensorflow/ros/object_detector_tensorflow/data/saved_model"  # Path to TensorFlow saved model folder
-    label_map_path: "src/object_detector_tensorflow/ros/object_detector_tensorflow/data/label_map.txt"  # Text file with class names (one label per line)
+    saved_model_path: "~/ros2_ws/src/object_detector_tensorflow/ros/object_detector_tensorflow/data/saved_model"  # Path to TensorFlow saved model folder
+    label_map_path: "~/ros2_ws/src/object_detector_tensorflow/ros/object_detector_tensorflow/data/label_map.txt"  # Text file with class names (one label per line)
     min_probability: 0.8            # Minimum probability for detections to be reported
     max_gpu_memory_fraction: 1.0    # Limits the GPU memory usage of the TensorFlow model to only a fraction (between 0 and 1)
     result_image_size: [640, 480]    # Dimensions of the result image [x,y]
     
 continuous_detection_node:
   ros__parameters:
-    saved_model_path: "src/object_detector_tensorflow/ros/object_detector_tensorflow/data/saved_model"
-    label_map_path: "src/object_detector_tensorflow/ros/object_detector_tensorflow/data/label_map.txt"
+    saved_model_path: "~/ros2_ws/src/object_detector_tensorflow/ros/object_detector_tensorflow/data/saved_model"
+    label_map_path: "~/ros2_ws/src/object_detector_tensorflow/ros/object_detector_tensorflow/data/label_map.txt"
     image_topic: "/image"  # ROS topic to listen for images
     min_probability: 0.8
     max_gpu_memory_fraction: 1.0
@@ -17,8 +17,8 @@ continuous_detection_node:
 
 detect_and_transform_node:
   ros__parameters:
-    saved_model_path: "src/object_detector_tensorflow/ros/object_detector_tensorflow/data/saved_model"
-    label_map_path: "src/object_detector_tensorflow/ros/object_detector_tensorflow/data/label_map.txt"
+    saved_model_path: "~/ros2_ws/src/object_detector_tensorflow/ros/object_detector_tensorflow/data/saved_model"
+    label_map_path: "~/ros2_ws/src/object_detector_tensorflow/ros/object_detector_tensorflow/data/label_map.txt"
     image_topic: "/image"
     depth_image_topic: "/depth_image"  # ROS topic to listen for depth images
     min_probability: 0.8
