added detect and transform option for all detected objects with filtering

--- a/ros/object_detector_tensorflow_interfaces/CMakeLists.txt
+++ b/ros/object_detector_tensorflow_interfaces/CMakeLists.txt
@@ -34,6 +34,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Detections.msg"
   "srv/DetectObjects.srv"
   "srv/DetectObjectPosition.srv"
+  "srv/DetectObjectPositions.srv"
   DEPENDENCIES ${DEPENDENCIES}
 )
 
