--- a/ros/object_detector_tensorflow/package.xml
+++ b/ros/object_detector_tensorflow/package.xml
@@ -9,6 +9,7 @@
 
   <depend>rclpy</depend>
   <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
   <depend>diagnostic_updater</depend>
   <depend>cv_bridge</depend>
   <depend>point_transformation_interfaces</depend>
